--- a/LZWCoding/LZWCoding.csproj
+++ b/LZWCoding/LZWCoding.csproj
@@ -50,8 +50,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArithmeticCoding\Metrics\Metrics.csproj">
-      <Project>{D2CF3073-163A-4746-BBF2-413F1C37D31F}</Project>
+    <ProjectReference Include="..\Metrics\Metrics.csproj">
+      <Project>{2617D42A-D71A-4B52-B633-30F416A349D1}</Project>
       <Name>Metrics</Name>
     </ProjectReference>
   </ItemGroup>
