--- a/ArithmeticCoding/ArithmeticCoding/ArithmeticCoding.csproj
+++ b/ArithmeticCoding/ArithmeticCoding/ArithmeticCoding.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Metrics\Metrics.csproj">
+      <Project>{2617D42A-D71A-4B52-B633-30F416A349D1}</Project>
+      <Name>Metrics</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
