--- a/ArithmeticCoding/ArithmeticCoding/ArithmeticCoding.csproj
+++ b/ArithmeticCoding/ArithmeticCoding/ArithmeticCoding.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArithmeticCoder.cs" />
+    <Compile Include="ProbabilityInterval.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
